# src/routes/orderRoutes.js
@@ -1,0 +1,9 @@
+// src/routes/orderRoutes.js
+const express = require('express');
+const { createOrder } = require('../controllers/orderController');
+
+const router = express.Router();
+
+router.post('/orders', createOrder);
+
+module.exports = router;
